# webappframeworks

./: README.md  biome.json  go.work  go.work.sum  mysql.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-benchmark.sh  test.sh
actixweb/: Cargo.toml  README.md  build.md
actixweb/src/: db_diesel.rs  main.rs
aspnetcoremvc/: Program.cs  README.md  aspnetcoremvc.csproj  aspnetcoremvc.sln
bun/: README-cluster.md  README.md  bun.lockb  fortunes.handlebars  index.ts  package.json  result-cluster.md  result.md  spawn.ts
bun-hono/: bun.lockb  package.json  result.md
deno/: Fortunes.tsx  README.md  README2.md  fortunes.eta  main.ts  main.tsx  result.md
deno-hono/: Fortunes.tsx  database.ts  index.tsx  result.md
echo/: README.md  README2.md  go.mod  go.sum  main.go  result.md
express/: README-nocluster.md  README.md  app.ts  biome.json  database.ts  package.json  pnpm-lock.yaml  result-cluster-production.md  result-single-production.md  tsconfig.json  types.ts
fastify/: README-nocluster.md  README.md  app.ts  package.json  pnpm-lock.yaml  result-cluster-production.md  result-single-production.md  tsconfig.json
fiber/: README-prefork.md  README.md  go.mod  go.sum  main.go  result-prefork.md  result.md
gin/: README.md  go.mod  go.sum  main.go  result.md
go-fasthttp/: README-sonnet.md  README.md  go.mod  go.sum  main.go  result.md
go-nethttp/: README-mux.md  README.md  go.mod  main.go  result-mux.md  result.md
joobyapp/: README.md  README2.md  README3.md  pom.xml
node-hono/: package.json  result.md  tsconfig.json
node-trpc/: README.md  (+1 more)
(+28 files in other folders)
