[package]
name = "actixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2"
actix-web = "4"
askama = "0.12.1"
diesel = { version = "2.1.0", features = ["mysql"] }
num_cpus = "1.16.0"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
